# Nidan

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py  main.py  models.py
server/data/: dataset_loader.py  feature_extractor.py  synthetic_fallback.py
server/graders/: grader_base.py  grader_task1.py  grader_task2.py  grader_task3.py
server/tasks/: task1_binary.py  task2_multiclass.py  task3_rare.py  task_base.py
server/utils/: active_learning.py  curriculum.py  reward_calculator.py
tests/: test_api.py  test_env.py  test_graders.py  test_reward.py
